# autopages

./: .gitattributes  README.md  pyproject.toml
assets/: data-test.csv  data.csv  template.pptx
autopages/: __main__.py  ppt.py  topdf.py
scripts/: analyse.py  convert.py
